fix identity button jump

--- a/src/containers/User/Detail/Identity/Identity.module.css
+++ b/src/containers/User/Detail/Identity/Identity.module.css
@@ -13,6 +13,10 @@
   display: flex;
 }
 
+.lastButton {
+  margin-right: var(--spacing-1);
+}
+
 .spinnerWrapper {
   display: flex;
   height: 100%;
